Fix building on Linux

--- a/Example05/Example05.csproj
+++ b/Example05/Example05.csproj
@@ -40,7 +40,7 @@
     <Compile Include="about.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="about.designer.cs">
+    <Compile Include="about.Designer.cs">
       <DependentUpon>about.cs</DependentUpon>
     </Compile>
     <Compile Include="InputFrame.cs">
